add tables/queries for drug response data

--- a/modules/beataml/resources/views/participantBrowser.html
+++ b/modules/beataml/resources/views/participantBrowser.html
@@ -21,6 +21,9 @@
                 this.reports = [
                     this.getReportConfig('samples', 'study', 'Clinical', 'Samples'),
                     this.getReportConfig('malignancies', 'study', 'Clinical', 'Malignancies'),
+                    this.getReportConfig('labResults', 'study', 'Clinical', 'Lab Results'),
+                    this.getReportConfig('drugResponse', 'study', 'Clinical', 'Drug Response Data'),
+                    this.getReportConfig('drugResponseRaw', 'study', 'Clinical', 'Drug Response Raw Data'),
                     this.getReportConfig('demographics', 'study', 'Clinical', 'Demographics'),
                     this.getReportConfig('wgs', 'study', 'Genomics', 'Whole Genome Data'),
                     this.getReportConfig('rnaseq', 'study', 'Genomics', 'RNA-Seq')
