updates to beataml / image table

--- a/modules/beataml/resources/views/participant.html
+++ b/modules/beataml/resources/views/participant.html
@@ -44,6 +44,7 @@
                     this.getReportConfig('drugResponse', 'study', 'Clinical', 'Drug Response Data'),
                     this.getReportConfig('drugResponseRaw', 'study', 'Clinical', 'Drug Response Raw Data'),
                     this.getReportConfig('demographics', 'study', 'Clinical', 'Demographics'),
+                    this.getReportConfig('images', 'study', 'Clinical', 'Images'),
                     this.getReportConfig('wgs', 'study', 'Genomics', 'Whole Genome Data'),
                     this.getReportConfig('rnaseq', 'study', 'Genomics', 'RNA-Seq')
                 ];
